FIX styles spacing

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -126,7 +126,7 @@
 
   .shortener {
     &::before {
-      height: 41px;
+      height: 61px;
     }
 
     .wrapper__form {
@@ -322,7 +322,7 @@
   }
 
   .hero {
-    padding-top: 100px;
+    padding-top: 20px;
     padding-bottom: 100px;
 
     .wrapper {
@@ -342,6 +342,10 @@
         font-size: 1rem;
         margin-bottom: 40px;
       }
+
+      .btn {
+        padding: 15px 40px;
+      }
     }
   }
 
@@ -354,6 +358,9 @@
 
     .wrapper {
       border-radius: 10px;
+
+      &.wrapper__form {
+        padding: 20px;
 
       form {
         gap: 15px;
@@ -370,6 +377,7 @@
           padding: 10px 20px;
         }
       }
+    }
 
       .invalid-message {
         position: inherit;
